--- a/Client/Automated Testing/advertisement tests.html
+++ b/Client/Automated Testing/advertisement tests.html
@@ -26,7 +26,7 @@
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">add addvertisement and remove it</td></tr>
+<tr><td rowspan="1" colspan="3">add test ad</td></tr>
 </thead>
 <tbody>
 <tr><td>open</td><td>http://localhost:8080/<datalist><option>http://localhost:8080/</option></datalist></td><td></td>
@@ -35,7 +35,7 @@
 </tr>
 <tr><td>clickAt</td><td>id=title<datalist><option>id=title</option><option>css=#title</option><option>//input[@id='title']</option><option>//div[@id='app']/div[2]/div/form/div/div/input</option><option>//div/input</option></datalist></td><td>243,27</td>
 </tr>
-<tr><td>type</td><td>id=title<datalist><option>id=title</option><option>css=#title</option><option>//input[@id='title']</option><option>//div[@id='app']/div[2]/div/form/div/div/input</option><option>//div/input</option></datalist></td><td>test automat23</td>
+<tr><td>type</td><td>id=title<datalist><option>id=title</option><option>css=#title</option><option>//input[@id='title']</option><option>//div[@id='app']/div[2]/div/form/div/div/input</option><option>//div/input</option></datalist></td><td>test automat</td>
 </tr>
 <tr><td>clickAt</td><td>//div[@id='app']/div[2]/div/form/div/div[2]/div/div/div[2]/label<datalist><option>//div[@id='app']/div[2]/div/form/div/div[2]/div/div/div[2]/label</option><option>//div[2]/label</option></datalist></td><td>55,12</td>
 </tr>
@@ -79,19 +79,69 @@
 </tr>
 <tr><td>clickAt</td><td>css=button.swal2-confirm.swal2-styled<datalist><option>css=button.swal2-confirm.swal2-styled</option><option>xpath=(//button[@type='button'])[6]</option><option>//div[3]/button</option></datalist></td><td>6,21</td>
 </tr>
-<tr><td>clickAt</td><td>css=button.btn.btn-warning<datalist><option>css=button.btn.btn-warning</option><option>xpath=(//button[@type='button'])[4]</option><option>//div[@id='app']/div[2]/div[4]/button[2]</option><option>//button[2]</option></datalist></td><td>34,17</td>
+</tbody></table>
+<table cellpadding="1" cellspacing="1" border="1">
+<thead>
+<tr><td rowspan="1" colspan="3">search test ad</td></tr>
+</thead>
+<tbody>
+<tr><td>open</td><td>http://localhost:8080/<datalist><option>http://localhost:8080/</option></datalist></td><td></td>
 </tr>
-<tr><td>clickAt</td><td>xpath=(//button[@type='button'])[6]<datalist><option>xpath=(//button[@type='button'])[6]</option><option>//div[@id='app']/div[2]/div/form/div/div[6]/div[3]/button</option><option>//div[3]/button</option></datalist></td><td>79,15</td>
+<tr><td>clickAt</td><td>id=searchInput<datalist><option>id=searchInput</option><option>css=#searchInput</option><option>//input[@id='searchInput']</option><option>//div[@id='navbarSupportedContent']/ul/li[3]/form/input</option><option>//input</option></datalist></td><td>53,15</td>
 </tr>
-<tr><td>clickAt</td><td>css=button.swal2-confirm.swal2-styled<datalist><option>css=button.swal2-confirm.swal2-styled</option><option>xpath=(//button[@type='button'])[9]</option><option>//div[2]/div/div[3]/button</option></datalist></td><td>34,16</td>
+<tr><td>type</td><td>id=searchInput<datalist><option>id=searchInput</option><option>css=#searchInput</option><option>//input[@id='searchInput']</option><option>//div[@id='navbarSupportedContent']/ul/li[3]/form/input</option><option>//input</option></datalist></td><td>test automat</td>
 </tr>
-<tr><td>clickAt</td><td>css=button.swal2-confirm.swal2-styled<datalist><option>css=button.swal2-confirm.swal2-styled</option><option>xpath=(//button[@type='button'])[8]</option><option>//div[3]/button</option></datalist></td><td>53,18</td>
+<tr><td>sendKeys</td><td>id=searchInput<datalist><option>id=searchInput</option><option>css=#searchInput</option><option>//input[@id='searchInput']</option><option>//div[@id='navbarSupportedContent']/ul/li[3]/form/input</option><option>//input</option></datalist></td><td>${KEY_ENTER}</td>
 </tr>
-<tr><td>clickAt</td><td>css=button.btn.btn-warning.m-1<datalist><option>css=button.btn.btn-warning.m-1</option><option>xpath=(//button[@type='button'])[5]</option><option>//div[@id='app']/div[2]/div/form/div/div[6]/div[2]/button</option><option>//div[2]/button</option></datalist></td><td>43,20</td>
+<tr><td>clickAt</td><td>id=type<datalist><option>id=type</option><option>css=#type</option><option>//select[@id='type']</option><option>//div[@id='app']/div[2]/div/div/div/form/div/select</option><option>//select</option></datalist></td><td>233,27</td>
 </tr>
-<tr><td>clickAt</td><td>css=button.swal2-confirm.swal2-styled<datalist><option>css=button.swal2-confirm.swal2-styled</option><option>xpath=(//button[@type='button'])[8]</option><option>//div[3]/button</option></datalist></td><td>38,1</td>
+<tr><td>select</td><td>id=type<datalist><option>id=type</option><option>css=#type</option><option>//select[@id='type']</option><option>//div[@id='app']/div[2]/div/div/div/form/div/select</option><option>//select</option></datalist></td><td>label=Konsola</td>
 </tr>
-<tr><td>clickAt</td><td>css=button.swal2-confirm.swal2-styled<datalist><option>css=button.swal2-confirm.swal2-styled</option><option>xpath=(//button[@type='button'])[4]</option><option>//div[3]/button</option></datalist></td><td>28,33</td>
+<tr><td>clickAt</td><td>id=type<datalist><option>id=type</option><option>css=#type</option><option>//select[@id='type']</option><option>//div[@id='app']/div[2]/div/div/div/form/div/select</option><option>//select</option></datalist></td><td>-16,-170</td>
+</tr>
+<tr><td>clickAt</td><td>id=state<datalist><option>id=state</option><option>css=#state</option><option>//select[@id='state']</option><option>//div[@id='app']/div[2]/div/div/div/form/div[2]/select</option><option>//div[2]/select</option></datalist></td><td>190,13</td>
+</tr>
+<tr><td>select</td><td>id=state<datalist><option>id=state</option><option>css=#state</option><option>//select[@id='state']</option><option>//div[@id='app']/div[2]/div/div/div/form/div[2]/select</option><option>//div[2]/select</option></datalist></td><td>label=Używany</td>
+</tr>
+<tr><td>clickAt</td><td>id=state<datalist><option>id=state</option><option>css=#state</option><option>//select[@id='state']</option><option>//div[@id='app']/div[2]/div/div/div/form/div[2]/select</option><option>//div[2]/select</option></datalist></td><td>-16,-256</td>
+</tr>
+<tr><td>clickAt</td><td>css=label.labels<datalist><option>css=label.labels</option><option>//div[@id='app']/div[2]/div/div/div/form/div[3]/label</option><option>//div[3]/label</option></datalist></td><td>59,13</td>
+</tr>
+<tr><td>clickAt</td><td>id=system11<datalist><option>id=system11</option><option>css=#system11</option><option>//input[@id='system11']</option><option>//div[@id='app']/div[2]/div/div/div/form/div[3]/div[3]/input</option><option>//div[3]/input</option></datalist></td><td>8,8</td>
+</tr>
+<tr><td>clickAt</td><td>id=4<datalist><option>id=4</option><option>css=#4</option><option>//input[@id='4']</option><option>//div[@id='app']/div[2]/div/div/div/form/div[4]/div[3]/input</option><option>//div[4]/div[3]/input</option></datalist></td><td>7,-88</td>
+</tr>
+<tr><td>clickAt</td><td>css=button.btn.btn-primary.btn-block.mb-2<datalist><option>css=button.btn.btn-primary.btn-block.mb-2</option><option>//div[@id='app']/div[2]/div/div/div[2]/div/button[2]</option><option>//button[2]</option></datalist></td><td>107,18</td>
+</tr>
+<tr><td>clickAt</td><td>//div[@id='innerList']/div/div/span/a/div/div[2]/div/div/div[3]<datalist><option>//div[@id='innerList']/div/div/span/a/div/div[2]/div/div/div[3]</option><option>//div/div/div[3]</option></datalist></td><td>151,17</td>
+</tr>
+</tbody></table>
+<table cellpadding="1" cellspacing="1" border="1">
+<thead>
+<tr><td rowspan="1" colspan="3">remove test ad</td></tr>
+</thead>
+<tbody>
+<tr><td>open</td><td>http://localhost:8080/<datalist><option>http://localhost:8080/</option></datalist></td><td></td>
+</tr>
+<tr><td>clickAt</td><td>css=ul.navbar-nav.ml-auto &gt; li.nav-item &gt; a.nav-link &gt; a<datalist><option>css=ul.navbar-nav.ml-auto &gt; li.nav-item &gt; a.nav-link &gt; a</option><option>//a[contains(text(),'Panel użytkownika')]</option><option>//div[@id='navbarSupportedContent']/ul[2]/li/a/a</option><option>//ul[2]/li/a/a</option></datalist></td><td>70,15</td>
+</tr>
+<tr><td>mouseOver</td><td>link=Panel użytkownika<datalist><option>link=Panel użytkownika</option><option>css=a.nav-link.router-link-exact-active.router-link-active</option><option>//div[@id='navbarSupportedContent']/ul[2]/li/a</option><option>//a[contains(@href, '/userPanel')]</option><option>//ul[2]/li/a</option></datalist></td><td></td>
+</tr>
+<tr><td>clickAt</td><td>link=Moje ogłoszenia<datalist><option>link=Moje ogłoszenia</option><option>//a[contains(text(),'Moje ogłoszenia')]</option><option>//div[@id='app']/div[2]/div/ul/li[4]/a</option><option>//a[contains(@href, '#moje-ogłoszenia')]</option><option>//li[4]/a</option></datalist></td><td>60,30</td>
+</tr>
+<tr><td>clickAt</td><td>//div[@id='innerList']/div/div/span/a/div/div[2]/div/div/div[2]<datalist><option>//div[@id='innerList']/div/div/span/a/div/div[2]/div/div/div[2]</option><option>//a/div/div[2]/div/div/div[2]</option></datalist></td><td>173,3</td>
+</tr>
+<tr><td>clickAt</td><td>css=button.btn.btn-warning<datalist><option>css=button.btn.btn-warning</option><option>xpath=(//button[@type='button'])[4]</option><option>//div[@id='app']/div[2]/div[4]/button[2]</option><option>//button[2]</option></datalist></td><td>58,25</td>
+</tr>
+<tr><td>clickAt</td><td>css=button.btn.btn-warning.m-1<datalist><option>css=button.btn.btn-warning.m-1</option><option>xpath=(//button[@type='button'])[5]</option><option>//div[@id='app']/div[2]/div/form/div/div[6]/div[2]/button</option><option>//div[2]/button</option></datalist></td><td>26,21</td>
+</tr>
+<tr><td>mouseOver</td><td>css=button.btn.btn-warning.m-1<datalist><option>css=button.btn.btn-warning.m-1</option><option>xpath=(//button[@type='button'])[5]</option><option>//div[@id='app']/div[2]/div/form/div/div[6]/div[2]/button</option><option>//div[2]/button</option></datalist></td><td></td>
+</tr>
+<tr><td>mouseOut</td><td>css=button.btn.btn-warning.m-1<datalist><option>css=button.btn.btn-warning.m-1</option><option>xpath=(//button[@type='button'])[5]</option><option>//div[@id='app']/div[2]/div/form/div/div[6]/div[2]/button</option><option>//div[2]/button</option></datalist></td><td></td>
+</tr>
+<tr><td>clickAt</td><td>css=button.swal2-confirm.swal2-styled<datalist><option>css=button.swal2-confirm.swal2-styled</option><option>xpath=(//button[@type='button'])[9]</option><option>//div[2]/div/div[3]/button</option></datalist></td><td>59,10</td>
+</tr>
+<tr><td>clickAt</td><td>css=button.swal2-confirm.swal2-styled<datalist><option>css=button.swal2-confirm.swal2-styled</option><option>xpath=(//button[@type='button'])[4]</option><option>//div[3]/button</option></datalist></td><td>37,28</td>
 </tr>
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
